[package]
name = "jsonrpc-v2-macros"
version = "0.1.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
description = "Proc macros for jsonrpc-v2"
keywords = ["jsonrpc", "json-rpc", "jsonrpc2", "rpc"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Deniallugo/jsonrpc-v2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
syn = {version = "1", features = ["full", "extra-traits"] }
proc-macro2 = "1"

[lib]
proc-macro = true